Update Dockerfile to the published Repository

--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -2,7 +2,7 @@
 
     <h1>{% include "modules/template.html" %}</h1>
 
-    <div class="mission-section" style="padding: 20px; border: 1px solid #e0e0e0; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+    <div class="mission-section" style="margin-top:10px; padding: 20px; border: 1px solid #e0e0e0; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
         {% if DISCLAIMER %}
             <p style="color: #c54442; overflow: hidden;">Nur ausschliesslich Testdaten hochladen. Dieses Produkt ist nicht nach Medizinproduktegesetz (MPG) zertifiziert und somit nicht zur Befundung geeignet.</p>
         {% endif %}
@@ -16,7 +16,7 @@
     </div>
 
     
-    <div class="mission-section" style="padding: 20px; border: 1px solid #e0e0e0; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+    <div class="mission-section" style="margin-top:10px; padding: 20px; border: 1px solid #e0e0e0; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
         <p>Discover the power of advanced ECG analysis with our end-to-end platform designed to simplify the electrocardiogram (ECG) analysis.<br>
         Whether you're a healthcare professional, a researcher, or someone without prior expertise in this field, our user-friendly interface empowers you to:</p>
         <ul>
@@ -28,7 +28,7 @@
     </div>
     
 
-    <div class="instituion-section" style="margin-bottom: 80px; padding: 20px; border: 1px solid #e0e0e0; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+    <div class="instituion-section" style="margin-top:10px; margin-bottom: 80px; padding: 20px; border: 1px solid #e0e0e0; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
         <div style="display: flex; gap: 20px;">
             <div class="team-member" style="flex: 1; background-color:transparent; display: flex; align-items: center; justify-content: center;">
                 <img src="https://www.uni-muenster.de/imperia/md/images/allgemein/farbunabhaengig/unims.svg" alt="Member 1" style="height: 100px; width: auto;">
