--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -169,7 +169,7 @@
             <nav class="navbar" id="myNavBar">
                 <ul>
                     <li><a target="_blank" href="https://imigitlab.uni-muenster.de/published/exchangeai">GitLab</a></li>
-                    <li></li><a target="_blank" href="https://arxiv.org/abs/2503.13570">Paper</a></li>
+                    <li><a target="_blank" href="https://arxiv.org/abs/2503.13570">Paper</a></li>
                     {% if DISCLAIMER %}
                     <li><a target="_blank" href="https://www.medizin.uni-muenster.de/imi/impressum.html">Legal Disclosure</a></li>
                     {% endif %}
