Transfer to GitHub

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -168,7 +168,7 @@
         <footer>
             <nav class="navbar" id="myNavBar">
                 <ul>
-                    <li><a target="_blank" href="https://imigitlab.uni-muenster.de/published/exchangeai">GitLab</a></li>
+                    <li><a target="_blank" href="https://github.com/VargheseLab/exchangeai">GitHub</a></li>
                     <li><a target="_blank" href="https://arxiv.org/abs/2503.13570">Paper</a></li>
                     {% if DISCLAIMER %}
                     <li><a target="_blank" href="https://www.medizin.uni-muenster.de/imi/impressum.html">Legal Disclosure</a></li>
