--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -9,8 +9,8 @@
         <p>For more information or if you use this software please cite this <a target="_blank" href="https://arxiv.org/abs/2503.13570">Paper</a>.<br>
         Quick links:</p>
         <ul>
-            <li><a target="_blank" href="https://imigitlab.uni-muenster.de/published/exchangeai/exchangeai/-/blob/main/README.md">Installation</a></li>
-            <li><a target="_blank" href="https://imigitlab.uni-muenster.de/published/exchangeai/exchangeai/-/blob/main/Getting_Started.md">Getting Started</a></li>
+            <li><a target="_blank" href="https://github.com/VargheseLab/exchangeai/blob/main/README.md">Installation</a></li>
+            <li><a target="_blank" href="https://github.com/VargheseLab/exchangeai/blob/main/Getting_Started.md">Getting Started</a></li>
             <li><a target="_blank" href="https://uni-muenster.sciebo.de/s/K85bd5tmoBqPa7w">Sample Data (100hz)</a></li>
         </ul>
     </div>
