Upload example data

--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a target="_blank" href="https://github.com/VargheseLab/exchangeai/blob/main/README.md">Installation</a></li>
             <li><a target="_blank" href="https://github.com/VargheseLab/exchangeai/blob/main/Getting_Started.md">Getting Started</a></li>
-            <li><a target="_blank" href="https://uni-muenster.sciebo.de/s/K85bd5tmoBqPa7w">Sample Data (100hz)</a></li>
+            <li><a target="_blank" href="https://github.com/VargheseLab/exchangeai/blob/main/example_data.zip">Sample Data (100hz)</a></li>
         </ul>
     </div>
 
